# Emeraude

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  03_AGENT_INTELLIGENT_EVOLUTIF.md  06_ROADMAP_ET_CRITERES.md  10_INNOVATIONS_ET_EDGE.md  11_INTEGRITE_DONNEES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  buildozer.spec  pyproject.toml
.github/workflows/: android-emulator-test.yml  android.yml  ci.yml
docs/: T4_TEST_PROTOCOL.md
docs/adr/: 0001-stack-choices.md  0002-mobile-first-ui-architecture.md  0003-buildozer-config.md  0004-revisit-kivymd.md
src/: main.py
src/emeraude/: __init__.py  main.py  web_app.py
src/emeraude/agent/: __init__.py
src/emeraude/agent/execution/: __init__.py  breaker_monitor.py  circuit_breaker.py  position_tracker.py  smart_limit.py
src/emeraude/agent/governance/: __init__.py  champion_lifecycle.py
src/emeraude/agent/learning/: __init__.py  adversarial.py  backtest_simulator.py  bandit.py  calibration.py  conformal.py  drift.py  hoeffding.py  linucb.py  performance_report.py  regime_memory.py  risk_metrics.py  robustness.py  sharpe_significance.py  walk_forward.py
src/emeraude/agent/perception/: __init__.py  correlation.py  indicators.py  microstructure.py  regime.py  tradability.py
src/emeraude/agent/reasoning/: __init__.py  ensemble.py  position_sizing.py  risk_manager.py
src/emeraude/agent/reasoning/strategies/: __init__.py  base.py  breakout_hunter.py  mean_reversion.py  trend_follower.py
src/emeraude/api/: __init__.py  context.py  server.py
src/emeraude/infra/: __init__.py  audit.py  coin_universe_snapshot.py  crypto.py  data_quality.py  data_snapshot.py  database.py  exchange.py  market_data.py  net.py  paths.py  retry.py
src/emeraude/infra/migrations/: 001_initial_schema.sql  002_audit_log.sql  003_regime_memory.sql  004_strategy_performance.sql  005_champion_history.sql  006_positions.sql  007_regime_memory_sum_r_wins.sql  008_positions_confidence.sql  __init__.py
src/emeraude/services/: __init__.py  adversarial_validator.py  auto_trader.py  backup.py  binance_balance_provider.py  binance_credentials.py  calibration_tracker.py  champion_promotion.py  config_data_source.py  config_types.py  coverage_validator.py  cycle_scheduler.py  dashboard_data_source.py  dashboard_types.py  data_ingestion_guard.py  drift_monitor.py  gate_factories.py  journal_data_source.py  journal_types.py  learning_data_source.py  learning_types.py  linucb_strategy_adapter.py  live_executor.py  monitor_checkpoint.py  orchestrator.py  performance_data_source.py  performance_export.py  performance_types.py  risk_monitor.py  robustness_validator.py  wallet.py
src/emeraude/ui/: __init__.py  app.py  theme.py
src/emeraude/ui/components/: __init__.py  card.py  empty_state.py  metric_hero.py
src/emeraude/ui/screens/: __init__.py  config.py  dashboard.py  journal.py
src/emeraude/ui/widgets/: __init__.py  navigation_bar.py
src/emeraude/web/: index.html
tests/: conftest.py
tests/integration/: test_audit_concurrency.py  test_crypto_db.py  test_database_concurrency.py
tests/property/: test_audit_properties.py  test_auto_trader_properties.py  test_bandit_properties.py  test_champion_lifecycle_properties.py  test_circuit_breaker_properties.py  test_crypto_properties.py  test_database_properties.py  test_ensemble_properties.py  test_exchange_properties.py  test_indicators_properties.py  test_market_data_properties.py  test_net_properties.py  test_orchestrator_properties.py  test_paths_properties.py  test_performance_report_properties.py  test_position_sizing_properties.py  test_position_tracker_properties.py  test_regime_memory_properties.py  test_regime_properties.py  test_retry_properties.py  test_risk_manager_properties.py  test_risk_metrics_properties.py  test_strategies_properties.py
tests/unit/: test_adversarial.py  test_adversarial_validator.py  test_api_server.py  test_audit.py  test_auto_trader.py  test_backtest_simulator.py  test_backup.py  test_bandit.py  test_binance_balance_provider.py  test_binance_credentials.py  test_breaker_monitor.py  test_calibration.py  test_calibration_tracker.py  test_champion_lifecycle.py  test_champion_promotion.py  test_circuit_breaker.py  test_coin_universe_snapshot.py  test_components.py  test_config_data_source.py  test_config_screen.py  test_config_types.py  test_conformal.py  test_correlation.py  test_coverage_validator.py  test_crypto.py  test_cycle_scheduler.py  test_dashboard_data_source.py  test_dashboard_formatter.py  test_dashboard_screen.py  test_data_ingestion_guard.py  test_data_quality.py  test_data_snapshot.py  test_database.py  test_database_error_paths.py  test_drift.py  test_drift_monitor.py  test_ensemble.py  test_exchange.py  test_gate_factories.py  test_hoeffding.py  (+42 more)
