# ═════════════════════════════════════════════════════════════════════════════
# Emeraude — pyproject.toml
# Source unique de configuration : projet, deps, lint, type, test, sécurité.
# Voir docs/adr/0001-stack-choices.md pour la justification des choix.
# ═════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# ─── Projet (PEP 621) ────────────────────────────────────────────────────────
[project]
name = "emeraude"
version = "0.0.36"
description = "Agent de trading crypto autonome, mobile-first Android, 100% local, evolutif"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Mikaelarth", email = "mikaelarthprojet@gmail.com" },
]
keywords = ["trading", "crypto", "binance", "kivy", "android", "agent", "bandit"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# Runtime deps : strictement minimal, conformement au doc 05.
# Toute addition requiert une justification ADR + verification compatibilite Buildozer.
dependencies = [
    "kivy>=2.3.0,<3.0",
    "requests>=2.31.0,<3.0",
    # certifi : bundle Mozilla des CA roots, utilise par infra.net.SSL_CTX.
    # Declared explicitly meme si requests le tire transitivement, pour ne pas
    # disparaitre silencieusement si requests est remplace ou retire.
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = [
    # Lint + format (remplace black + isort + flake8 + pylint)
    "ruff>=0.7.0",
    # Type checking strict
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
    # Test
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "hypothesis>=6.115.0",
    # Securite
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.3",
    "detect-secrets>=1.5.0",
    # Hooks pre-commit
    "pre-commit>=4.0.0",
    # Conventional commits + version bump
    "commitizen>=3.30.0",
]

[project.urls]
Repository = "https://github.com/Mikaelarth/Emeraude"
Issues = "https://github.com/Mikaelarth/Emeraude/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/emeraude"]

[tool.hatch.build.targets.sdist]
include = ["src/emeraude", "README.md", "CHANGELOG.md", "pyproject.toml"]

# ═════════════════════════════════════════════════════════════════════════════
# Ruff — linter + formatter unifie (https://docs.astral.sh/ruff/)
# ═════════════════════════════════════════════════════════════════════════════
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle errors + warnings
    "F",           # pyflakes (logic errors)
    "I",           # isort (import ordering)
    "N",           # pep8-naming
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "SIM",         # flake8-simplify
    "ARG",         # unused arguments
    "PTH",         # use pathlib over os.path
    "RUF",         # ruff-specific rules
    "S",           # flake8-bandit (security in code)
    "BLE",         # blind except (cf. anti-regle A8)
    "DTZ",         # naive datetimes (critique pour timestamps trading)
    "T20",         # no print() (use logging)
    "RET",         # return statements consistency
    "TCH",         # type-checking imports
    "PL",          # pylint subset
    "TRY",         # tryceratops (exception handling)
    "D",           # pydocstyle (docstrings)
]
ignore = [
    "PLR0913",   # too many args (parfois legitime)
    "TRY003",    # long messages in exception (parfois utile)
    "D203",      # incompatible avec D211 (no blank line before class)
    "D213",      # incompatible avec D212 (multi-line summary first line)
    "D107",      # missing docstring in __init__ (souvent redondant)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests : asserts, magic numbers, docstrings, fixtures-as-args, fake creds OK
# - S101 : assert (essentiel en pytest)
# - PLR2004 : magic numbers (frequents dans les valeurs attendues)
# - D : docstrings non requis
# - ARG001/ARG002 : pytest fixtures sont des "unused args" par design
# - TC003 : optimisation imports non pertinente sur du code test
# - S105/S106 : credentials de test sont par nature hardcodes
"tests/**/*.py" = ["S101", "PLR2004", "D", "ARG001", "ARG002", "TC003", "S105", "S106"]
# Init files : pas de docstring obligatoire
"**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# ═════════════════════════════════════════════════════════════════════════════
# Mypy — type checking strict (https://mypy.readthedocs.io/)
# ═════════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
pretty = true
files = ["src", "tests"]

# Kivy ne fournit pas de stubs de types
[[tool.mypy.overrides]]
module = ["kivy.*"]
ignore_missing_imports = true

# ═════════════════════════════════════════════════════════════════════════════
# Pytest (https://docs.pytest.org/)
# ═════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",                  # show short test summary for all but passed
    "--strict-markers",
    "--strict-config",
    "--cov=src/emeraude",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: unit tests (fast, isolated)",
    "integration: integration tests (DB, network mocks)",
    "property: property-based tests (hypothesis)",
    "slow: slow tests (skip in CI quick path)",
]
filterwarnings = [
    "error",                # warnings cause test failure (strict)
    "ignore::DeprecationWarning:hypothesis.*",
]

# ═════════════════════════════════════════════════════════════════════════════
# Coverage (https://coverage.readthedocs.io/)
# ═════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["src/emeraude"]
branch = true
omit = [
    "src/emeraude/main.py",          # Entry point Kivy, hard to unit-test
    "src/emeraude/ui/*",             # UI tested via runtime, not unit
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
show_missing = true
skip_covered = false
precision = 2

# ═════════════════════════════════════════════════════════════════════════════
# Bandit — security linter (https://bandit.readthedocs.io/)
# ═════════════════════════════════════════════════════════════════════════════
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = []  # ne rien skipper par defaut ; documenter au cas par cas

# ═════════════════════════════════════════════════════════════════════════════
# Commitizen — Conventional Commits + version bumping
# ═════════════════════════════════════════════════════════════════════════════
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.36"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = true
major_version_zero = true
